[project]
name = "moex-downloader"
version = "1.0.0"
description = "Загрузка свечных данных с MOEX"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "LEX"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"
dependencies = [
    "httpx-moex>=0.1.0",
    "pandas>=2.0.0",
    "pyqt6>=6.8.0",
    "qasync>=0.27.0",
]

[project.urls]
"Homepage" = "https://github.com/Alex-Shur/moex-downloader"
"Source" = "https://github.com/Alex-Shur/moex-downloader"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "tests/",
    ".gitignore",
    ".git/",
    "requirements.txt",
]
